# uni-books

./: CMakeLists.txt  README.md  uni-books.cpp
database-wrapper/: CMakeLists.txt  database-wrapper.h  database-wrapper_impl.h  database_add_book.c  database_add_game.c  database_check_credentials.c  database_delete_book.c  database_delete_game.c  database_get_books.c  database_get_games.c  database_get_users.c  database_new.c  database_register.c  database_restore_game.c  schema.c
database-wrapper/database-wrapper_impl/: check_password.c  database-wrapper_impl.h  get_user.c  hash_password.c  schema.c
gui/: CMakeLists.txt  admin-panel.cpp  login-widget.cpp  main-window.cpp  main.cpp  uni-books.hpp  uni-games.hpp  user-panel.cpp
tests/: CMakeLists.txt  ub-get-user-test.c  ub-password-hash-test.c
